--- a/Web_Fundamentals/JQUERY/Ninja_to_Cat/index.html
+++ b/Web_Fundamentals/JQUERY/Ninja_to_Cat/index.html
@@ -27,6 +27,7 @@
     //         $(this).attr('data-alt-src',$(this).attr("src"));
     //     });
     // });
+
     $("img").click(function() {
             $(this).attr("src", $(this).attr('data-alt-src'));
     });
@@ -35,3 +36,5 @@
     </script>
 </body>
 </html>
+
+//Pushing changes for git
